# pyqt6-calculator

./: pyproject.toml
pyqt6_calculator/: __init__.py  app.py  controller.py  styles.css
