[tool.poetry]
name = "pyqt6-calculator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pyqt6_calculator"}]

[tool.poetry.dependencies]
python = "^3.9"
pyqt6 = "^6.6.1"
matplotlib = "^3.8.3"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
